improve OpenAPI schema for get job response structure
